RESOLVED FIXED 181203
Bottom right pixel of feDiffuseLighting has the wrong color
https://bugs.webkit.org/show_bug.cgi?id=181203
Summary Bottom right pixel of feDiffuseLighting has the wrong color
Simon Fraser (smfr)
Reported 2017-12-31 20:15:51 PST
Bottom right pixel of feDiffuseLighting has the wrong color
Attachments
Patch (4.57 KB, patch)
2017-12-31 20:17 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (2.14 MB, application/zip)
2017-12-31 21:14 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (2.52 MB, application/zip)
2017-12-31 21:26 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (3.22 MB, application/zip)
2017-12-31 21:42 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.19 MB, application/zip)
2017-12-31 21:43 PST, EWS Watchlist
no flags
Patch (5.67 KB, patch)
2018-01-01 11:57 PST, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2017-12-31 20:17:41 PST
EWS Watchlist
Comment 2 2017-12-31 21:14:55 PST Comment hidden (obsolete)
EWS Watchlist
Comment 3 2017-12-31 21:14:56 PST Comment hidden (obsolete)
EWS Watchlist
Comment 4 2017-12-31 21:26:08 PST Comment hidden (obsolete)
EWS Watchlist
Comment 5 2017-12-31 21:26:09 PST Comment hidden (obsolete)
EWS Watchlist
Comment 6 2017-12-31 21:42:20 PST Comment hidden (obsolete)
EWS Watchlist
Comment 7 2017-12-31 21:42:22 PST Comment hidden (obsolete)
EWS Watchlist
Comment 8 2017-12-31 21:42:59 PST Comment hidden (obsolete)
EWS Watchlist
Comment 9 2017-12-31 21:43:00 PST Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 10 2018-01-01 11:57:53 PST
Simon Fraser (smfr)
Comment 11 2018-01-01 12:29:04 PST
Radar WebKit Bug Importer
Comment 12 2018-01-02 13:17:46 PST
Note You need to log in before you can comment on or make changes to this bug.